# transcription-service

./: .env_example  .gitignore  Client.py  Config.py  Dockerfile  Event.py  LICENSE  README.md  StreamServer.py  TCPserver.py  UDPserver.py  data.py  docker-compose-simulation.yml  docker-compose.yml  logger.py  logging_config.json  m_confirm_words.py  m_convert_audio.py  m_create_audio_buffer.py  m_faster_whisper.py  m_rate_limiter.py  m_vad.py  main.py  ogg.py  pyproject.toml  requirements.txt  requirements_freez.txt  simulate.py  simulate_live_audio_stream.py  structure.drawio
app/api/: api.py  router.py
app/api/routes/system/: endpoints.py  schemas.py
app/core/: config.py
app/db/mongo/: api_key.py  role.py  user.py
app/db/redis/: redis.py  session.py
app/services/transcription/: Dockerfile  Event.py  LICENSE  README.md  StreamServer.py  UDPserver.py  docker-compose-simulation.yml  logger.py  m_confirm_words.py  main.py  requirements.txt  simulate_live_audio_stream.py
app/web/: index.html
audio/: .gitignore  README.md
logs/: .gitignore
prometheus/: prometheus.yml
